fix overlapping icons. maybe?

--- a/css/devices.css
+++ b/css/devices.css
@@ -399,7 +399,7 @@
         left: 50%;
         -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
-        top: 70%;
+        top: 60%;
         margin: 0;
         display: flex;
       }
@@ -407,14 +407,14 @@
 
         float: left;
         margin: 10px;
-        width: 60px;
-        height: 60px;
-        font-size: 20px;
+        width: 50px;
+        height: 50px;
+        font-size: 18px;
         font-family: 'Odibee Sans', cursive;
         text-align: center;
         border: 3px #fff solid;
         border-radius: 100%;
-        padding: 15px 0;
+        padding: 12px 0;
       }
 
       #time_left div p{
@@ -425,11 +425,17 @@
         top: 20px;
       }
       .subhead {
-          top: 35%;
-          transform: translateY(-35%);
+          top: 30%;
+          transform: translateY(-30%);
       }
       #date {
         font-size: 25px;
+      }
+      #main_logo {
+        padding-top: 1vh;
+      }
+      #icons-perma {
+        font-size: 12px;
       }
 }
 
@@ -1136,7 +1142,7 @@
     }
 
     #event_info div div {
-        font-size: 14px;
+        font-size: 13.5px;
         height: 33vh;
     }
     #event_info div div h1 {
